ChangeLog 'burst-clusterizer'

Structure

Date - user
	FEATURES: 	explanation of new features
	BUGFIX:   	explanation of bug solved
	CHANGES:  	explanation of codification changes

2012/03/05 - jgonzale
	
	CHANGES:	MALLOC_free_memory does not need size any more. Erased
				alternative implementation of memory allocation (pool based).

2012/02/28 - jgonzale
	CHANGES:	Minimun integration

2012/02/21 - grodrigu
	FEATURES:	Added support for application reloading

	BUGFIX:		Solved a bug when using 'off_t', 'size_t' and 'int' to
				index structures.

	BUGFIX:		Corrected spelling mistake in 'configure.ac'

	BUGFIX:		Solved a pattern matching when reading MPI communaction
				primitives and some pointer errors in 'file_data_access.c'

2012/02/03 - jgonzale
	CHANGES:	Complete integration of all Dimemas versions. 

	CHANGES:	Total change of 'file_data_acces.c'. Now is uses 'getline'
				and 'sscanf' as basic ASCII parsing of DIM traces. It also
				performs a more sofisticated file descriptor sharing in
				conjunction with the new IO library (under the 'io' directory).
				Some primitives defined in the new trace description are not
				supported yet (One-Sided definitions and operations).

				The new IO library acts as a wrapper between the actual C
				'stdio.h' and the Dimemas code. The main feature is the
				ability to account the number of available file descriptors.
				This accounting is crucial for optimal file descriptor sharing.

	CHANGES:	Also present in the 2012/01/11 commit, but more extended, is
				the clear separation of simulator loading and the model
				itself. It is not perfect, but the files 'configuration.c|h'
				and 'comm_configuration.c|h') include the vast majority of
				'target machine' initialization. The schedulers initiliazation
				has not been moved to this location, due to its 'function
				pointers' design.

	CHANGES:	Paraver trace generation has been completely redesign. Now
				it produces a set of sorted temporal files for states and